[gd_scene load_steps=67 format=3 uid="uid://dfarnl607w24w"]

[ext_resource type="Script" uid="uid://dmlk22k75bxah" path="res://maps/looping/logic/level5.gd" id="1_knj6q"]
[ext_resource type="Texture2D" uid="uid://4fcf7v0l20o8" path="res://assets/Backgound/level5_scene.png" id="2_px1hr"]
[ext_resource type="Texture2D" uid="uid://5yk4bllahhph" path="res://assets/Button/maps/run.png" id="3_nbp7g"]
[ext_resource type="Texture2D" uid="uid://cqqa07t1lte16" path="res://assets/Button/maps/back_map.png" id="4_w7iyo"]
[ext_resource type="Texture2D" uid="uid://c87v032h6thhx" path="res://assets/Button/maps/petunjuk_map.png" id="5_3ky5h"]
[ext_resource type="Texture2D" uid="uid://pytsm8qg7bkb" path="res://assets/Spritesheet/character.png" id="6_kqlkf"]
[ext_resource type="Texture2D" uid="uid://cx53php7iod5s" path="res://assets/Other/papan_next_materi.png" id="7_3ky5h"]
[ext_resource type="Texture2D" uid="uid://luw6laahs8om" path="res://assets/Button/maps/lanjut.png" id="8_in0ec"]
[ext_resource type="Texture2D" uid="uid://d3gn5muckqffd" path="res://assets/Button/maps/ulang.png" id="9_kqlkf"]
[ext_resource type="Texture2D" uid="uid://43rbbx860ckv" path="res://assets/Other/tips_looping.png" id="10_kqlkf"]
[ext_resource type="Texture2D" uid="uid://cxs54teeyh70d" path="res://assets/Button/maps/goo.png" id="11_b3vlw"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_nbp7g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7iyo"]
size = Vector2(17, 511)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ky5h"]
size = Vector2(693, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_in0ec"]
size = Vector2(110, 170)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqlkf"]
size = Vector2(50, 300)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b3vlw"]
size = Vector2(177, 258)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i0u3q"]
size = Vector2(128, 207)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sd0kx"]
size = Vector2(426.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tw3kd"]
size = Vector2(47, 175)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wevc2"]
size = Vector2(171, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i26rf"]
size = Vector2(65, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2jh"]
atlas = ExtResource("6_kqlkf")
region = Rect2(0, 896, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hce3"]
atlas = ExtResource("6_kqlkf")
region = Rect2(64, 896, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k543t"]
atlas = ExtResource("6_kqlkf")
region = Rect2(128, 896, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tfix"]
atlas = ExtResource("6_kqlkf")
region = Rect2(192, 896, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t68yo"]
atlas = ExtResource("6_kqlkf")
region = Rect2(256, 896, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_448op"]
atlas = ExtResource("6_kqlkf")
region = Rect2(320, 896, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mvi8"]
atlas = ExtResource("6_kqlkf")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_npiro"]
atlas = ExtResource("6_kqlkf")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_klwta"]
atlas = ExtResource("6_kqlkf")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqgdn"]
atlas = ExtResource("6_kqlkf")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m80o8"]
atlas = ExtResource("6_kqlkf")
region = Rect2(256, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_luhji"]
atlas = ExtResource("6_kqlkf")
region = Rect2(320, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndfke"]
atlas = ExtResource("6_kqlkf")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ot3ao"]
atlas = ExtResource("6_kqlkf")
region = Rect2(448, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b4b7"]
atlas = ExtResource("6_kqlkf")
region = Rect2(512, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsxwu"]
atlas = ExtResource("6_kqlkf")
region = Rect2(0, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfv6t"]
atlas = ExtResource("6_kqlkf")
region = Rect2(64, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1765p"]
atlas = ExtResource("6_kqlkf")
region = Rect2(128, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv40i"]
atlas = ExtResource("6_kqlkf")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yftr"]
atlas = ExtResource("6_kqlkf")
region = Rect2(256, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mjat"]
atlas = ExtResource("6_kqlkf")
region = Rect2(320, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtkd7"]
atlas = ExtResource("6_kqlkf")
region = Rect2(384, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_edw4s"]
atlas = ExtResource("6_kqlkf")
region = Rect2(448, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmuia"]
atlas = ExtResource("6_kqlkf")
region = Rect2(512, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vqn6"]
atlas = ExtResource("6_kqlkf")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uixi4"]
atlas = ExtResource("6_kqlkf")
region = Rect2(64, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u357"]
atlas = ExtResource("6_kqlkf")
region = Rect2(128, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_23p62"]
atlas = ExtResource("6_kqlkf")
region = Rect2(192, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m383s"]
atlas = ExtResource("6_kqlkf")
region = Rect2(256, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlwv1"]
atlas = ExtResource("6_kqlkf")
region = Rect2(320, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic0uc"]
atlas = ExtResource("6_kqlkf")
region = Rect2(384, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkugi"]
atlas = ExtResource("6_kqlkf")
region = Rect2(448, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc4bi"]
atlas = ExtResource("6_kqlkf")
region = Rect2(512, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5fjr"]
atlas = ExtResource("6_kqlkf")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i5kt"]
atlas = ExtResource("6_kqlkf")
region = Rect2(64, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mym4j"]
atlas = ExtResource("6_kqlkf")
region = Rect2(128, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0t5d"]
atlas = ExtResource("6_kqlkf")
region = Rect2(192, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oma1i"]
atlas = ExtResource("6_kqlkf")
region = Rect2(256, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g554"]
atlas = ExtResource("6_kqlkf")
region = Rect2(320, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e1ld"]
atlas = ExtResource("6_kqlkf")
region = Rect2(384, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtm2x"]
atlas = ExtResource("6_kqlkf")
region = Rect2(448, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcwds"]
atlas = ExtResource("6_kqlkf")
region = Rect2(512, 704, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_b3vlw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hce3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k543t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tfix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t68yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_448op")
}],
"loop": true,
"name": &"diam",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mvi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npiro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klwta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqgdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m80o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luhji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndfke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ot3ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b4b7")
}],
"loop": true,
"name": &"jalan_atas",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsxwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfv6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1765p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv40i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yftr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mjat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtkd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edw4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmuia")
}],
"loop": false,
"name": &"jalan_bawah",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vqn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uixi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u357")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23p62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m383s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlwv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic0uc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkugi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc4bi")
}],
"loop": true,
"name": &"jalan_kanan",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5fjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i5kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mym4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0t5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oma1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g554")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e1ld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtm2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcwds")
}],
"loop": true,
"name": &"jalan_kiri",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i0u3q"]
radius = 6.0
height = 12.0

[node name="Level5" type="Node2D"]
script = ExtResource("1_knj6q")

[node name="map" type="Sprite2D" parent="."]
position = Vector2(480, 265)
texture = ExtResource("2_px1hr")

[node name="run" type="Button" parent="map"]
offset_left = 242.0
offset_top = 132.0
offset_right = 450.0
offset_bottom = 180.0
pivot_offset = Vector2(104, 24)
focus_mode = 0
icon = ExtResource("3_nbp7g")
flat = true

[node name="back" type="Button" parent="map"]
offset_left = 290.0
offset_top = 195.0
offset_right = 398.0
offset_bottom = 223.0
pivot_offset = Vector2(54, 14)
focus_mode = 0
icon = ExtResource("4_w7iyo")
flat = true

[node name="tips" type="Button" parent="map"]
offset_left = 290.0
offset_top = 225.0
offset_right = 398.0
offset_bottom = 253.0
pivot_offset = Vector2(54, 14)
focus_mode = 0
icon = ExtResource("5_3ky5h")
flat = true

[node name="StaticBody2D" type="StaticBody2D" parent="map"]
physics_material_override = SubResource("PhysicsMaterial_nbp7g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(220, -1.5)
shape = SubResource("RectangleShape2D_w7iyo")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-468, 1)
shape = SubResource("RectangleShape2D_w7iyo")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-120.5, -185)
shape = SubResource("RectangleShape2D_3ky5h")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-120.5, 255)
shape = SubResource("RectangleShape2D_3ky5h")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(156, 164)
shape = SubResource("RectangleShape2D_in0ec")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-4, 54)
shape = SubResource("RectangleShape2D_kqlkf")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-196.5, 121)
shape = SubResource("RectangleShape2D_b3vlw")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(85, -75.5)
shape = SubResource("RectangleShape2D_i0u3q")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-245.75, -73)
shape = SubResource("RectangleShape2D_sd0kx")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-379.5, 25.5)
shape = SubResource("RectangleShape2D_tw3kd")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="map/StaticBody2D"]
position = Vector2(-373.5, 178)
shape = SubResource("RectangleShape2D_wevc2")

[node name="TextEdit" type="TextEdit" parent="map"]
texture_filter = 1
offset_left = 236.0
offset_top = -245.0
offset_right = 458.0
offset_bottom = 109.0
pivot_offset = Vector2(111, 155)
theme_override_font_sizes/font_size = 12

[node name="FinishArea" type="Area2D" parent="map"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/FinishArea"]
position = Vector2(182, -140)
shape = SubResource("RectangleShape2D_i26rf")

[node name="karakter" type="CharacterBody2D" parent="map"]
texture_filter = 1
position = Vector2(-1325, -240)
scale = Vector2(1.5, 1.5)

[node name="karaktermap2" type="AnimatedSprite2D" parent="map/karakter"]
z_as_relative = false
texture_filter = 1
position = Vector2(578, 87.333305)
scale = Vector2(0.5388127, 0.72093016)
sprite_frames = SubResource("SpriteFrames_b3vlw")
animation = &"diam"
autoplay = "diam"
speed_scale = 1.75
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/karakter"]
position = Vector2(595.3334, 127.33333)
shape = SubResource("CapsuleShape2D_i0u3q")

[node name="UI_Finish" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="UI_Finish"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.5
offset_top = -175.0
offset_right = 262.5
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_3ky5h")
metadata/_edit_use_anchors_ = true

[node name="TombolLanjut" type="Button" parent="UI_Finish/TextureRect"]
layout_mode = 0
offset_left = 275.0
offset_top = 275.0
offset_right = 458.0
offset_bottom = 318.0
pivot_offset = Vector2(91.5, 21.5)
focus_mode = 0
icon = ExtResource("8_in0ec")
flat = true

[node name="TombolUlangi" type="Button" parent="UI_Finish/TextureRect"]
layout_mode = 0
offset_left = 65.0
offset_top = 275.0
offset_right = 248.0
offset_bottom = 318.0
pivot_offset = Vector2(91.5, 21.5)
focus_mode = 0
icon = ExtResource("9_kqlkf")
flat = true

[node name="UI_Tips" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="UI_Tips"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -175.0
offset_right = 300.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(300, 175)
texture = ExtResource("10_kqlkf")
metadata/_edit_use_anchors_ = true

[node name="go" type="Button" parent="UI_Tips/TextureRect"]
texture_filter = 1
layout_mode = 0
offset_left = 435.5
offset_top = 290.5
offset_right = 568.5
offset_bottom = 323.5
pivot_offset = Vector2(66.5, 16.5)
focus_mode = 0
icon = ExtResource("11_b3vlw")
flat = true
